--- a/views/login.html
+++ b/views/login.html
@@ -55,7 +55,7 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" />
 
-        <button type="submit">Login</button>
+        <button type="submit">Login to Admin</button>
       </form>
       <!-- <p>Don't have an account? <a href="/register">Register now!</a></p> -->
     </div>
