store session on database

--- a/views/login.html
+++ b/views/login.html
@@ -48,9 +48,9 @@
   </head>
   <body>
     <div class="login-container">
-      <form action="/admin/login" method="get">
+      <form action="/admin/login" method="post">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="username" />
+        <input type="text" id="username" name="tel" />
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" />
